--- a/src/App.css
+++ b/src/App.css
@@ -368,9 +368,10 @@ body{
   margin:10px 0 0 ;
   font-size: 25px;
   text-align: center;
+  color: var(--color--primario);
 }
 .p-verMas{
-  height: 50px;
+  height: 40px;
 }
 
 .p-visto{
@@ -389,7 +390,7 @@ body{
   text-decoration: none;
   color:var(--color--secundario);
   font-size: 1rem;
-  
+  padding-top: 10px;
 }
 
 /*contacto*/
